blog/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  # The Deployment needs a way to know which Pods it manages.
  selector:
    # "Manage all Pods that have the label app=posts."
    matchLabels:
      # jhhfguyegbfy: posts => this is also valid
      app: posts
  # This is the blueprint used to create Pods.
  # Whenever I need a new Pod, create it using this template.
  template:
    metadata:
      # Every Pod created by this Deployment gets the label app=posts.
      # it matches the selector above, so the Deployment knows that it manages these Pods.
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: ayushpatil0810/posts:latest # this is the image that we want to run in our pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: ayushpatil0810/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  type: ClusterIP # this is the default type of service, we can also remove this line
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4001
      targetPort: 4001
